--- a/attendance-frontend/package.json
+++ b/attendance-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.13",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
     "react": "19.1.0",
